--- a/packages/pretzelai-extension/style/index.css
+++ b/packages/pretzelai-extension/style/index.css
@@ -8,6 +8,7 @@
 @import url('~@jupyterlab/ui-components/style/index.css');
 @import url('~@jupyterlab/apputils/style/index.css');
 @import url('~@jupyterlab/rendermime/style/index.css');
+@import url('~@jupyterlab/codemirror/style/index.css');
 @import url('~@jupyterlab/outputarea/style/index.css');
 @import url('~@jupyterlab/cells/style/index.css');
 @import url('~@jupyterlab/notebook/style/index.css');
