--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -186,3 +186,9 @@ div.pretzelInputField > .cm-editor {
 .splash-content a {
   text-decoration: underline;
 }
+
+.prompt-history-icon {
+  height: 100%;
+  margin-top: 10px;
+  margin-left: 8px;
+}
