react based prompt history working

--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -187,7 +187,7 @@ div.pretzelInputField > .cm-editor {
   text-decoration: underline;
 }
 
-.prompt-history-icon {
+.prompt-history-button {
   height: 100%;
   margin-top: 10px;
   margin-left: 8px;
