--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -43,7 +43,7 @@
 
 .input-container {
   margin-top: var(--jp-ui-margin, 10px);
-  margin-left: 70px;
+  margin-left: 72px;
   display: flex;
   flex-direction: column;
 }
@@ -188,7 +188,31 @@ div.pretzelInputField > .cm-editor {
 }
 
 .prompt-history-button {
-  height: 100%;
-  margin-top: 10px;
-  margin-left: 8px;
+  margin-top: var(--jp-ui-margin, 10px);
+  margin-left: var(--jp-ui-margin, 10px);
+  position: relative;
+}
+
+.prompt-history-button button {
+  background-color: var(--jp-layout-color0);
+  color: var(--jp-ui-font-color1);
+  padding: 0px;
+  border: none;
+  border-radius: var(--jp-border-radius);
+  position: relative;
+}
+
+.prompt-history-button .tooltip {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--jp-layout-color1);
+  color: var(--jp-ui-font-color1);
+  padding: 5px;
+  border-radius: var(--jp-border-radius);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  border: 1px solid var(--jp-border-color1);
+  z-index: 1000; /* Ensure the tooltip is above other elements */
 }
