--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -62,6 +62,15 @@ div.cm-scroller > div {
   /* caret-color: aqua !important; */
 }
 
+.submit-button-container,
+.remove-button-container,
+.prompt-history-button-container,
+.submit-button-container button,
+.remove-button-container button,
+.prompt-history-button-container button {
+  position: relative;
+}
+
 .pretzelInputSubmitButton {
   background-color: var(--jp-brand-color1);
   border-radius: var(--jp-border-radius, 5px);
@@ -80,7 +89,32 @@ div.cm-scroller > div {
   max-width: 100px;
   min-height: 25px;
   margin-top: var(--jp-ui-margin, 10px);
+  margin-right: var(--jp-ui-margin, 10px);
   color: var(--jp-ui-inverse-font-color1);
+}
+
+.prompt-history-button {
+  background-color: var(--jp-layout-color0);
+  color: var(--jp-ui-font-color1);
+  padding: 0px;
+  border: none;
+  border-radius: var(--jp-border-radius);
+  margin-top: var(--jp-ui-margin, 10px);
+}
+
+.input-field-buttons-container div .tooltip {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--jp-layout-color1);
+  color: var(--jp-ui-font-color1);
+  padding: 5px;
+  border-radius: var(--jp-border-radius);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  border: 1px solid var(--jp-border-color1);
+  z-index: 1000; /* Ensure the tooltip is above other elements */
 }
 
 .accept-and-run-button,
@@ -185,34 +219,4 @@ div.pretzelInputField > .cm-editor {
 
 .splash-content a {
   text-decoration: underline;
-}
-
-.prompt-history-button {
-  margin-top: var(--jp-ui-margin, 10px);
-  margin-left: var(--jp-ui-margin, 10px);
-  position: relative;
-}
-
-.prompt-history-button button {
-  background-color: var(--jp-layout-color0);
-  color: var(--jp-ui-font-color1);
-  padding: 0px;
-  border: none;
-  border-radius: var(--jp-border-radius);
-  position: relative;
-}
-
-.prompt-history-button .tooltip {
-  position: absolute;
-  top: -30px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: var(--jp-layout-color1);
-  color: var(--jp-ui-font-color1);
-  padding: 5px;
-  border-radius: var(--jp-border-radius);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  white-space: nowrap;
-  border: 1px solid var(--jp-border-color1);
-  z-index: 1000; /* Ensure the tooltip is above other elements */
 }
