--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -221,6 +221,28 @@ div.pretzelInputField > .cm-editor {
   text-decoration: underline;
 }
 
+.jp-pretzelai-rendermime-markdown .jp-RenderedHTMLCommon {
+  padding-right: 0;
+}
+
+.jp-pretzelai-rendermime-markdown pre {
+  background-color: var(--jp-cell-editor-background);
+  overflow-x: auto;
+  white-space: pre;
+  margin: 0;
+  padding: 4px 2px 0 6px;
+  border: var(--jp-border-width) solid var(--jp-cell-editor-border-color);
+}
+
+.jp-pretzelai-rendermime-markdown pre > code {
+  background-color: inherit;
+  overflow-x: inherit;
+  white-space: inherit;
+}
+
+.jp-pretzelai-rendermime-markdown mjx-container {
+  font-size: 119%;
+
 .cm-placeholder {
   white-space: pre-wrap; /* Preserve line breaks */
 }
