--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -294,7 +294,7 @@ div.pretzelInputField > .cm-editor {
 
 .jp-pretzelai-rendermime-markdown mjx-container {
   font-size: 119%;
-
+}
 .cm-placeholder {
   white-space: pre-wrap; /* Preserve line breaks */
 }
