--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -285,28 +285,80 @@ div.pretzelInputField > .cm-editor {
   padding-right: 0;
 }
 
-.jp-pretzelai-rendermime-markdown pre {
+#jp-right-stack .jp-pretzelai-rendermime-markdown pre {
   background-color: var(--jp-cell-editor-background);
   overflow-x: auto;
   white-space: pre;
   margin: 0;
   padding: 4px 2px 0 6px;
   border: var(--jp-border-width) solid var(--jp-cell-editor-border-color);
+  font-size: 0.775rem;
 }
 
-.jp-pretzelai-rendermime-markdown pre > code {
+#jp-right-stack .jp-pretzelai-rendermime-markdown pre > code {
   background-color: inherit;
   overflow-x: inherit;
   white-space: inherit;
 }
 
-.jp-pretzelai-rendermime-markdown mjx-container {
+#jp-right-stack .jp-pretzelai-rendermime-markdown mjx-container {
   font-size: 119%;
 }
+
 .cm-placeholder {
   white-space: pre-wrap; /* Preserve line breaks */
 }
 
 .monaco-diff-editor {
   margin-left: 70px;
+}
+
+#jp-right-stack > .lm-Widget {
+  min-width: 450px !important;
+}
+
+#pretzelai-chat-panel .user-msg {
+  background-color: var(--jp-layout-color2);
+  padding-top: 10px;
+  padding-left: 16px;
+}
+
+#pretzelai-chat-panel .submit-button-container,
+#pretzelai-chat-panel .clear-button-container,
+#pretzelai-chat-panel .history-prev-button-container,
+#pretzelai-chat-panel .history-next-button-container {
+  position: relative;
+  display: inline-block;
+}
+
+#pretzelai-chat-panel .submit-button-container .tooltip,
+#pretzelai-chat-panel .clear-button-container .tooltip,
+#pretzelai-chat-panel .history-prev-button-container .tooltip,
+#pretzelai-chat-panel .history-next-button-container .tooltip {
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-35%);
+  background-color: var(--jp-layout-color1);
+  color: var(--jp-ui-font-color1);
+  padding: 5px;
+  border-radius: var(--jp-border-radius);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  border: 1px solid var(--jp-border-color1);
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+#pretzelai-chat-panel .submit-button-container .tooltip {
+  transform: translateX(-25%) !important;
+}
+
+#pretzelai-chat-panel .submit-button-container:hover .tooltip,
+#pretzelai-chat-panel .clear-button-container:hover .tooltip,
+#pretzelai-chat-panel .history-prev-button-container:hover .tooltip,
+#pretzelai-chat-panel .history-next-button-container:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
 }
