--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -262,6 +262,18 @@ div.pretzelInputField > .cm-editor {
   font-size: var(--jp-ui-font-size1, 16px);
 }
 
+.splash-buttons .button-red {
+  margin: auto;
+  padding: var(--jp-ui-padding, 10px 20px);
+  border-radius: var(--jp-border-radius, 5px);
+  cursor: pointer;
+  font-size: var(--jp-ui-font-size1, 16px);
+  display: block;
+  width: fit-content;
+  background-color: #ffcccc;
+  color: black;
+}
+
 #splash-accept {
   background-color: var(--jp-success-color1, #4caf50);
   color: var(--jp-ui-inverse-font-color1, white);
