--- a/packages/pretzelai-extension/style/index.css
+++ b/packages/pretzelai-extension/style/index.css
@@ -12,5 +12,6 @@
 @import url('~@jupyterlab/outputarea/style/index.css');
 @import url('~@jupyterlab/cells/style/index.css');
 @import url('~@jupyterlab/completer/style/index.css');
+@import url('~@jupyterlab/mainmenu/style/index.css');
 @import url('~@jupyterlab/notebook/style/index.css');
 @import url('./base.css');
