Improve prompt box (cmd K) by allowing users to select `@variable` with a dropdown (#127)
Co-authored-by: prasoon <prasoon@prasoon>

--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -55,9 +55,6 @@
   margin-left: 70px;
   color: var(--jp-ui-font-color1);
 }
-.cm-editor .cm-cursor {
-  border-left-color: var(--jp-editor-cursor-color);
-}
 
 .input-container {
   margin-top: var(--jp-ui-margin, 10px);
@@ -73,6 +70,9 @@
 
 .pretzelInputField {
   border: 1px solid var(--jp-border-color1);
+  background: var(--jp-cell-editor-background);
+  padding-top: 4px;
+  padding-left: 4px;
 }
 
 .submit-button-container,
@@ -206,7 +206,8 @@
   outline: none;
 }
 
-div.pretzelInputField > .cm-editor {
+/* Monaco editor styles */
+.pretzelInputField .monaco-editor {
   height: 100px;
   color: var(--jp-ui-font-color1);
   background-color: var(--jp-layout-color1);
