--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -275,6 +275,10 @@
   color: black;
 }
 
+.cm-editor.ͼ1.ͼ2.ͼ4.ͼo.pretzel-hidden-editor {
+  /* display: none !important; */
+}
+
 #splash-accept {
   background-color: var(--jp-success-color1, #4caf50);
   color: var(--jp-ui-inverse-font-color1, white);
