--- a/packages/pretzelai-extension/style/base.css
+++ b/packages/pretzelai-extension/style/base.css
@@ -57,7 +57,6 @@
 }
 
 .input-container {
-  margin-top: var(--jp-ui-margin, 10px);
   margin-left: 72px;
   display: flex;
   flex-direction: column;
@@ -66,6 +65,10 @@
 .input-field-buttons-container {
   display: flex;
   flex-direction: row;
+}
+
+.pretzelParentContainerAI {
+  margin-top: 10px;
 }
 
 .pretzelInputField {
@@ -307,7 +310,7 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
   font-size: 0.8rem;
 }
 
-.jp-pretzelai-rendermime-markdown .jp-RenderedHTMLCommon>* {
+.jp-pretzelai-rendermime-markdown .jp-RenderedHTMLCommon > * {
   padding: 0;
   margin: 0;
 }
@@ -322,7 +325,7 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
   font-size: 0.775rem;
 }
 
-#jp-right-stack .jp-pretzelai-rendermime-markdown pre>code {
+#jp-right-stack .jp-pretzelai-rendermime-markdown pre > code {
   background-color: inherit;
   overflow-x: inherit;
   white-space: inherit;
@@ -341,7 +344,7 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
   margin-left: 70px;
 }
 
-#jp-right-stack>.lm-Widget {
+#jp-right-stack > .lm-Widget {
   min-width: 450px !important;
 }
 
@@ -361,7 +364,8 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
 #pretzelai-chat-panel .submit-button-container,
 #pretzelai-chat-panel .clear-button-container,
 #pretzelai-chat-panel .history-prev-button-container,
-#pretzelai-chat-panel .history-next-button-container {
+#pretzelai-chat-panel .history-next-button-container,
+#pretzelai-chat-panel .upload-image-button-container {
   position: relative;
   display: inline-block;
 }
@@ -369,7 +373,8 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
 #pretzelai-chat-panel .submit-button-container .tooltip,
 #pretzelai-chat-panel .clear-button-container .tooltip,
 #pretzelai-chat-panel .history-prev-button-container .tooltip,
-#pretzelai-chat-panel .history-next-button-container .tooltip {
+#pretzelai-chat-panel .history-next-button-container .tooltip,
+#pretzelai-chat-panel .upload-image-button-container .tooltip {
   position: absolute;
   top: -40px;
   left: 50%;
@@ -392,10 +397,25 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
   top: -55px;
 }
 
+#pretzelai-chat-panel .upload-image-button-container .tooltip {
+  transform: translateX(-50%) !important;
+  top: -55px;
+}
+
+#pretzelai-chat-panel .upload-image-button-container button {
+  padding: 2px 2px 1px 2px !important;
+}
+
+#pretzelai-chat-panel .upload-image-button-container svg {
+  width: 20px;
+  height: 20px;
+}
+
 #pretzelai-chat-panel .submit-button-container:hover .tooltip,
 #pretzelai-chat-panel .clear-button-container:hover .tooltip,
 #pretzelai-chat-panel .history-prev-button-container:hover .tooltip,
-#pretzelai-chat-panel .history-next-button-container:hover .tooltip {
+#pretzelai-chat-panel .history-next-button-container:hover .tooltip,
+#pretzelai-chat-panel .upload-image-button-container:hover .tooltip {
   visibility: visible;
   opacity: 1;
 }
@@ -443,7 +463,7 @@ body[data-jp-theme-light='false'] .cm-editor.ͼ1.ͼ2.ͼo.pretzel-new-code-genera
     opacity: 0.5;
   }
 
-  .Mui-checked+.MuiSwitch-track {
+  .Mui-checked + .MuiSwitch-track {
     background-color: var(--jp-brand-color1);
     opacity: 0.8;
   }
@@ -535,11 +555,11 @@ body.jp-mod-dark .cm-editor.cm-merge-b .cm-changedText {
   background-color: transparent !important;
 }
 
-.pretzelParentContainerAI>div:not(.fixed) {
+.pretzelParentContainerAI > div:not(.fixed) {
   transition: all 0.3s ease;
 }
 
-.pretzelParentContainerAI>div.fixed {
+.pretzelParentContainerAI > div.fixed {
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -622,7 +642,7 @@ body.jp-mod-dark .cm-editor.cm-merge-b .cm-changedText {
   padding: 4px 5px !important;
 }
 
-#pretzelai-chat-panel div.lines-content.monaco-editor-background div.contentWidgets>div {
+#pretzelai-chat-panel div.lines-content.monaco-editor-background div.contentWidgets > div {
   font-size: 0.75rem !important;
 }
 
@@ -634,4 +654,47 @@ body.jp-mod-dark .cm-editor.cm-merge-b .cm-changedText {
 #pretzelai-chat-panel h6 {
   padding-top: 10px;
   padding-bottom: 5px;
+}
+
+#pretzelai-chat-panel div img {
+  max-width: 100%;
+  max-height: 70vh;
+  display: block;
+}
+
+.upload-image-button-container {
+  position: relative;
+  display: inline-block;
+}
+
+.upload-image-button-container .tooltip {
+  position: absolute;
+  top: -55px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--jp-layout-color1);
+  color: var(--jp-ui-font-color1);
+  padding: 5px;
+  border-radius: var(--jp-border-radius);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  border: 1px solid var(--jp-border-color1);
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.upload-image-button-container:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.upload-image-button-container button {
+  padding: 2px 2px 1px 2px !important;
+}
+
+.upload-image-button-container svg {
+  width: 20px;
+  height: 20px;
 }
